remove deploy_request && add deployment_input_properties